<resources>
    <string name="app_name">MotoInventory Tracker</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter your email address.</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="email_address">Please enter your registered Email address</string>
    <string name="sendpwd">Send Password</string>
    <string name="login_failed">Authentication failed. Please re-enter username and password and retry.</string>
    <string name="invalid_username">Please enter a valid username</string>
    <string name="reset_pwd_url">http://192.168.1.4:8000/api/method/frappe.core.doctype.user.user.reset_password/?user=%s</string>
    <string name="title_activity_home">MotoInventory Tracker - Home</string>
    <string name="title_activity_receivefromre">MotoInventory Tracker - Receive Vehicle</string>
    <string name="title_activity_loadvehicle">MotoInventory Tracker - Load Vehicle</string>
    <string name="title_activity_unloadvehicle">MotoInventory Tracker - Unload Vehicle</string>
    <string name="title_activity_allocatevehicle">MotoInventory Tracker - Allocate Vehicle</string>
    <string name="title_activity_delivervehicle">MotoInventory Tracker - Deliver Vehicle</string>
    <string name="logotitle">Moto Inventory Tracker</string>
    <string name="receive_from_RE">Receive Vehicle</string>
    <string name="allocate_vehicle">Allocate Vehicle</string>
    <string name="receive_from_WH">Unload Vehicle</string>
    <string name="load_vehicle">Load Vehicle</string>
    <string name="deliver_vehicle">Deliver Vehicle</string>
    <string name="delivery_status_of_vehicle">Delivered</string>
    <string name="continue_str">Continue</string>
    <string name="next">Next</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="homescreen_mode">Mode</string>
    <string name="action_title">Alert!</string>
    <string name="ok_str">OK</string>
    <string name="override_string">Override?</string>
    <string name="cancel_str">Cancel</string>
    <string name="send_str">Send</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="vehicle_notfound_ibnr_title">Vehicle not found in Invoiced and Not Received list</string>
    <string name="vehicle_found_invoiced_action_message">Receive Vehicle? Click Yes to receive vehicle into your current warehouse and No to dismiss.</string>
    <string name="vehicle_notfound_invoiced_action_message">Receive Vehicle? Click Yes to receive vehicle into your current warehouse and No to dismiss.</string>
    <string name="serialNoNotFound_str">Vehicle not found on ERPNext </string>
    <string name="createserialno_str">has not been found. Select the vehicle Item Code below. Click Ok to create a new Serial No entry on ERPNext and add this to the Invoiced but not Received list, Cancel to do nothing.</string>
    <string name="send_mail_action_message">Please enter email addresses of recipients who should receive the latest IBNR list and click Send or hit Cancel to dismiss.</string>
    <string name="send_mail_title">Send the latest IBNR list</string>
    <string name="emailaddr_hint">Comma separated email addresses of the recipients</string>
    <string name="error_getting_item_table">Could not fetch item codes from ERPNext.</string>
    <string name="error_creating_new_serial_no">Could not create a new Serial No document on ERPNext with serial no:</string>
    <string name="receive_vehicle_success">. Vehicle received into your warehouse successfully.</string>
    <string name="receive_vehicle_failed">Could not receive the vehicle on ERPNext. </string>
    <string name="could_not_send_mail">Could not send email to intended recipients.</string>
    <string name="progress_dialog_message">Please wait.....</string>
    <string name="donotloadvehicle_str">Vehicle required in current warehouse. Load Vehicle? Click Yes to load and No to cancel.</string>
    <string name="loadvehicle_str">Vehicle needs to be loaded. Load Vehicle? Click Yes to load and No to cancel.</string>
    <string name="donotloadvehicletoday_str">Vehicle not required to be moved today. Load Vehicle? Click Yes to load the vehicle and No to cancel.</string>
    <string name="donotunloadvehicle_str">Vehicle not required in current warehouse. Unload Vehicle? Click Yes to unload and No to cancel.</string>
    <string name="unloadvehicle_str">Vehicle needs to be unloaded. Unload Vehicle? Click Yes to unload and No to cancel.</string>
    <string name="donotunloadvehicletoday_str">Vehicle not required to be unloaded today. Unload Vehicle? Click Yes to unload  and No to cancel.</string>
    <string name="selectloadvehiclesorhomepage_str">All required vehicles have been unloaded. Do you want to load some vehicles on the truck? Click Load to go to Load Vehicles mode or Home to go back to Home page. </string>
    <string name="selectloadvehiclesorhomepage_str_incomplete">All required vehicles have not been unloaded. Do you want to load some vehicles on the truck? Click Load to go to Load Vehicles mode or Home to go back to Home page.</string>
    <string name="allvehiclesunloaded">Unloading Complete</string>
    <string name="allvehiclesnotunloaded">Unloading Incomplete!</string>
    <string name="load_vehicle_str">Load</string>
    <string name="home_page_str">Home</string>
    <string name="dummywarehouse">DUMMY</string>
    <string name="dummydate">1983/07/28</string>
    <string name="deliver_vehicle_str">Vehicle is to be delivered today. </string>
    <string name="donotdelivervehicle_str">Vehicle not be delivered today. </string>
    <string name="donotdelivervehicle_statusnotABND_str">Vehicle status is not Allocated but not Delivered. </string>
    <string name="brn_missing_for_vehicle_str">Vehicle does not have a valid booking reference number. </string>
    <string name="do_you_want_to_deliver_anyway_str">This vehicle should not be delivered. Do you want to deliver anyway? Click Yes to deliver and No to cancel.</string>
    <string name="vehiclenotfoundinmovesheet_str">Vehicle not found in the move sheet.Click Override to move this vehicle anyway.</string>
    <string name="downloadmovesheetmsg">Please click on the Download button to download the latest Move Sheet.</string>
    <string name="whlocation">Click here to get your current location</string>
    <string name="choosewh">Choose your warehouses below</string>
    <string name="welcome_text">Welcome to a simple bar code scanner app that helps you track your vehicles</string>
    <string name="serversettings">Welcome to the Simple Scanner App. This app helps you track vehicles. Please set the IP address of your server address below. This will be required only once at the time of installation. Click Next to continue.</string>
    <string name="provideserveraddress">Please enter your server address here</string>
    <string name="exampleserveraddress">Example: 192.168.1.4:8000 or examplesite.com:port number</string>
    <string name="commontext">Please click on the scanner icon at the bottom left corner to scan a vehicle or the green tick to finish the task and go back to the home page</string>
    <string name="customerselection">Choose the customer from the drop down list below</string>
    <string name="delivervehiclehintmessage">In order to make a delivery note for the vehicle, please first select the customer to whom the vehicle is to be delivered from the drop down list below. Click on the barcode icon at the bottom left of this page to continue scanning the next vehicle or the greeen finish icon at the bottom right of the page to finish this task and go back to Home page</string>
    <string name="enterBRN">Click on the bar code scanner icon at the bottom left of the screen to scan the vehicle. Enter the Booking Reference Number below to be allocated to this vehicle and then click Allocate Vehicle to proceed. To continue scanning, click on the bar code scanner image below or click on the green tick on the bottom right to go back to home page.</string>
    <string name="BRN">Booking Reference No: </string>
    <string name="vehicle_tobe_allocated">The booking reference number is valid. Allocating the vehicle to the booking reference number  </string>
    <string name="vehicle_allocated_success_str">. Vehicle is successfully allocated.</string>
    <string name="truckname">Truck - RE</string>
    <string name="scan_next_vehicle">Scan next vehicle</string>
    <string name="complete_task">Complete this task to go back to home screen</string>
    <string name="couldnotsubmitstockentry">There is no valid stock entry present on ERPNext. Could not submit the stock entry for the vehicle </string>
    <string name="whstring">WH: </string>
    <string name="truckstring">Truck: </string>
    <string name="is_vehicle_allocated_str">Allocated?: </string>
    <string name="is_vehicle_delivered_str">Delivered?: </string>
    <string name="get_vehicle_stats">Vehicle Details</string>
    <string name="vehicle_warehouse">Warehouse vehicle currently in:</string>
    <string name="transferrequired">Transfer Alert for </string>
    <string name="transferstr">This vehicle is not currently in your warehouse. Would you like to transfer this vehicle to your location now? Click Transfer to transfer now and Cancel to dismiss.</string>
    <string name="success_string">Success</string>
    <string name="vehicle_status">Vehicle Status:</string>
    <string name="delivery_required_at_str">Delivery Required At: </string>
    <string name="delivery_required_on_str">Delivery Required On: </string>
    <string name="not_available_str">NA</string>
    <string name="vehicle_notdelivered_str">Not Delivered</string>
    <string name="vehicle_allocated_status_str">Allocated but not Delivered</string>
    <string name="vehicle_allocated_str">Allocated</string>
    <string name="vehicle_notallocted_str">Not Allocated</string>
    <string name="error_string">Error</string>
    <string name="cannot_allocate_vehicle">Cannot allocate vehicle</string>
    <string name="transfer_button_str">Transfer</string>
    <string name="submit_transfer_stock_entry">. Click OK to transfer on ERPNext.</string>
    <string name="could_not_rollback_prev_sales_invoice">Could not roll back previous sales invoice associated with this vehicle</string>
    <string name="vehicle_delivered_success_str">Vehicle has been delivered.</string>
    <string name="page_limit_length">500</string>
    <string name="serverresponse_err">The server did not respond with the right return code. Please check your input.</string>
    <string name="controllevel_high_str">High</string>
    <string name="control_level_medium_str">Medium</string>
    <string name="control_level_low_str">Low</string>
    <string name="vehicle_tobe_allocated_low_control">The control level is set to low on ERPNext server. Vehicle will be allocated to dummy customer, ignoring the given booking reference number.</string>
    <string name="allocate_vehicle_medium_control">The control level is set to medium on ERPNext server. The booking reference number does not exist. The vehicle will be allocated to a dummy customer.</string>
</resources>