<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epochconsulting.motoinventory.vehicletracker.activity.AllocateVehicles">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/common_logo"
        >
    <include
        layout="@layout/commonlogo"

       >

    </include>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/common_logo"
        android:id="@+id/common_msg"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enterBRN"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="10dp"

        android:layout_below="@+id/common_msg"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/bookingrefnoentry">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"

            android:text="@string/BRN"
            android:textColor="@color/colorAccent"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:id="@+id/brn"
            android:inputType="text"
            android:maxLines="1"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_below="@id/bookingrefnoentry">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/getbrninfo"
            android:text="@string/allocate_vehicle"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/cardview_light_background"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <include layout="@layout/common_footer"

        />
    </LinearLayout>

</RelativeLayout>
